refactor structure of code

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "E-commerce shop to kitchen food machines",
   "main": "init.js",
   "scripts": {
-    "dev:server": "nodemon init.js",
+    "dev:server": "nodemon ./src/init.js",
     "jest:test": "jest --watch"
   },
   "repository": {
@@ -24,29 +24,16 @@
   "homepage": "https://github.com/AveselsJS/s_prof_e_commerce_shop#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "jest-watcher": "^27.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^1.0.0",
     "supertest": "^6.2.2"
-  },
-  "env": {
-    "node": true,
-    "es6": true,
-    "jest": true
-  },
-  "jest": {
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "verbose": true
   }
 }
