--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "validator": "^13.7.0"
   },
