--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "html-to-text": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.3",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.15",
+    "pug": "^3.0.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
