--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.3",
     "html-to-text": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
@@ -41,5 +42,8 @@
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^1.0.0",
     "supertest": "^6.2.2"
+  },
+  "_moduleAliases": {
+    "@catalog": "src/modules/catalog/"
   }
 }
