create the sessions and basket
create the session and basket
connect user to mongoStore when user authorization in site.

create the basket form and puth to basket method

--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
   "homepage": "https://github.com/AveselsJS/s_prof_e_commerce_shop#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "html-to-text": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
