--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.15",
     "pug": "^3.0.2",
-    "validator": "^13.7.0"
+    "swagger-ui-express": "^4.3.0",
+    "validator": "^13.7.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "jest": "^27.5.1",
