--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "express-session": "^1.17.2",
     "html-to-text": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
-    "module-alias": "^2.2.2",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
