the forgot password testes

--- a/config/test.env
+++ b/config/test.env
@@ -3,3 +3,15 @@ PORT=4000
 
 mongoUri=mongodb://localhost:27017/s-prof_test
 MONGO_DB_NAME=s-prof_test
+
+JWT_SECRET=s_prof_commerce
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90d
+
+EMAIL_FROM=vladislav.pestsov@gmail.com
+SENDGRID_API_KEY=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
+
+EMAIL_USERNAME=ad2dbd61ee5a84
+EMAIL_PASSWORD=242dbe5106719b
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
