--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "E-commerce shop to kitchen food machines",
   "main": "init.js",
   "scripts": {
-    "dev": "nodemon ./src/init.js",
+    "start": "nodemon ./src/init.js",
     "jest:test": "env-cmd -f ./config/test.env jest --watchAll"
   },
   "repository": {
